--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,11 @@
 body {
     background-color: grey;
 }
+
+.quiz-buttons {
+    display: flex;
+    flex-direction: column;
+    button {
+        text-align: start;
+    }
+}
