mechanics almost done

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,10 @@ body {
     background-color: grey;
 }
 
+.hidden {
+    display: none;
+}
+
 .quiz-buttons {
     display: flex;
     flex-direction: column;
