--- a/src/scss/home/_background_home.scss
+++ b/src/scss/home/_background_home.scss
@@ -4,34 +4,40 @@ body {
 }
 
 .container {
-    // border: 1px solid green;
     width: 100vw;
     height: 100vh;
     position: relative;
 }
 
-.side-pic1 {
+.side-pic {
     position: absolute;
-    // border: 1px solid pink;
+    background-size: auto;
+    background-repeat: no-repeat;
+}
+.side-pic1 {
+    height: 195px;
+    width: 80px;
+    background-image: url('../img/top_left_s.png');
 }
 
 .side-pic2 {
-    position: absolute;
     right: 0;
-    // border: 1px solid green;
+    height: 215px;
+    width: 105px;
+    background-image: url('../img/top_right_s.png');
 }
 
 .side-pic3 {
-    position: absolute;
     bottom: 0;
-    // border: 1px solid red;
+    height: 140px;
+    width: 190px;
+    background-image: url('../img/btm_left_s.png') ;
 }
 
 .side-pic4 {
-    position: absolute;
     right: 0;
     bottom: 0;
-    // border: 1px solid blue;
+    height: 155px ;
+    width: 105px ;
+    background-image: url('../img/btm_right_s.png') ;
 }
-
-/// main part of the site
