--- a/src/scss/home/_content_home.scss
+++ b/src/scss/home/_content_home.scss
@@ -1,8 +1,8 @@
 .main-content {
     position: absolute;
-    margin: 5vh 18vw 5vh;
+    margin: 5vh 18vw;
     height: 90vh;
-    // width: 60vw;
+    width: 64vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,21 +27,20 @@
 
 .text {
     font-size: 13px;
-    line-height: 16px;
+    line-height: 20px;
+    width: 50vw;
     text-align: center;
 }
 
 .buttons {
     min-width: 200px;
     font-size: 14px;
-    color: white;
     padding: 15px 20px;
-    background-color: #702283;
+    color: white;
+    background-color: $lila;
     text-transform: uppercase;
     font-weight: bold;
     border-radius: 25px;
+    // border: 2px solid rgb(112, 34, 131);
     cursor: pointer;
-    &:hover {
-
-    }
 }
