added one more media condition in case of bigger screens

--- a/src/scss/home/_media_home.scss
+++ b/src/scss/home/_media_home.scss
@@ -93,3 +93,10 @@
         width: auto;
     }
 }
+
+@media only screen and (min-width: 1700px) {
+    .text {
+        font-size: 25px;
+        line-height: 35px;
+    }
+}
