quiz question part without hight adjustment yet

--- a/src/scss/config/_basic_settings.scss
+++ b/src/scss/config/_basic_settings.scss
@@ -4,6 +4,7 @@ $font: 'Roboto', sans-serif;
 
 // defining color
 $lila: rgb(112, 34, 131);
+$green: rgb(35, 166, 56);
 
 //basic class settings
 * {
