--- a/src/scss/question/_content_question.scss
+++ b/src/scss/question/_content_question.scss
@@ -3,18 +3,15 @@
     color: white;
     width: 100vw;
     height: 100vh;
-    // border: 2px solid red;
 }
 
 .quiz {
-    // border: 1px solid white;
-    padding-left: 25px;
-    position: relative;
-    width: 90%;
+    padding-left: 8vw;    
 }
 .quiz-number {
     background-color: $green;
     min-height: 80px;
+    height: 20vh;
     width: 45px;
     border-radius: 0 0 25px 25px;
     padding-bottom: 25px;
@@ -26,10 +23,7 @@
     }
 }
 .quiz-question {
-    min-height: 100px;
-    // width: 65%;
-    // border: 1px solid pink;
-    padding: 10px 0;
+    min-height: 18vh;
     font-size: 15px;
     line-height: 20px;
     font-weight: 500;
@@ -38,19 +32,9 @@
 }
 
 ul.quiz-buttons {
-    padding: 20px 0 40px;
-    margin: 0 10px;
-    border-bottom: 1px solid white ;
-    button {
-        width: 70%;
-        margin: 5px 0;
-        border-radius: 10px;
-        transition: .5s;
-        &:hover {
-            background-color: #49155C;
-            cursor: pointer;
-        }
-    }
+    padding: 5vh 0 10vh;
+
+    
     li {
         padding: 5px;
         span {
@@ -59,13 +43,33 @@ ul.quiz-buttons {
     }
 }
 
-.book-logo {
-    // border: 1px solid white;
-    display: flex;
-    justify-content: flex-end;
-    .book-title {
-        width: 70px;
-        margin: 20px 10px;
+.quiz-btn {
+    width: 70%;
+    margin: 5px 0;
+    padding: 5px 15px;
+    border-radius: 15px;
+    transition: .5s;
+    cursor: pointer;
+    &:hover {
+        background-color: #49155C;
     }
 }
 
+.book-logo {
+    border-top: 1px solid white;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 8vw;
+    .img-title {
+        width: 70px;
+        margin: 5vh 10px;
+    }
+}
+
+.right {
+    background-color: $green;
+}
+
+.hov {
+    background-color: #49155C;
+}
