--- a/src/scss/question/_content_question.scss
+++ b/src/scss/question/_content_question.scss
@@ -29,12 +29,11 @@
     font-weight: 500;
     display: flex;
     align-items: center;
+    width: 70%;
 }
 
 ul.quiz-buttons {
     padding: 5vh 0 10vh;
-
-    
     li {
         padding: 5px;
         span {
