--- a/src/scss/question/_media_question.scss
+++ b/src/scss/question/_media_question.scss
@@ -1,6 +1,33 @@
 @media only screen and (min-width: 750px ) {
     .quiz-number {
         height: 10vh;
+        min-height: 100px
+    }
+    .quiz-question {
+        margin-top: 10vh;
+    }
+    .quiz-question,
+    .quiz-btn {
+        margin-left: 8vw;
+        font-size: 17px;
+        line-height: 25px;
+        width: 50%;
+    }
+    .quiz-buttons {
+        height: 45vh;    
+    }
+    //logo
+    .book-logo {
+        .img-title {
+        width: 130px;
+        }
+    }
+}
+    
+
+@media only screen and (min-width: 1100px) {
+    .quiz {
+        padding: 0 20vw;
     }
     .quiz-question,
     .quiz-btn {
@@ -8,28 +35,20 @@
         font-size: 17px;
     }
     .quiz-buttons {
-        height: 45vh;    
+        height: 35vh;
     }
-    .quiz-btn {
-        width: 50%;
-    }
-
-    //logo
     .book-logo {
-        .img-title {
-        width: 130px;
-        }
+        margin-right: 0;
     }
-
-}
-    
-
-
-@media only screen and (min-width: 1100px) {
-
 }
 
 
 @media only screen and (min-width: 1700px) {
-
+    .quiz-number p,
+    .quiz-question,
+    .quiz-btn {
+        font-size: 25px;
+        line-height: 35px;
+    }
+    
 }
