--- a/src/scss/home/_content_home.scss
+++ b/src/scss/home/_content_home.scss
@@ -34,14 +34,9 @@
 }
 
 .buttons {
+    @include basic-btn;
     min-width: 200px;
     font-size: 14px;
-    padding: 15px 20px;
-    color: white;
     background-color: $lila;
-    text-transform: uppercase;
-    font-weight: bold;
-    border-radius: 25px;
     // border: 2px solid rgb(112, 34, 131);
-    cursor: pointer;
 }
