displaying chapter done

--- a/src/scss/final/main_final.scss
+++ b/src/scss/final/main_final.scss
@@ -1,3 +1,6 @@
+@import '../config/reset';
+@import '../config/basic_settings';
+
 @import './content_final.scss';
 @import './chapter_final.scss';
 @import './media_final.scss';
