--- a/src/scss/final/content_final.scss
+++ b/src/scss/final/content_final.scss
@@ -8,24 +8,48 @@
     position: relative;
     background-image: url(../img/ftl_s.png);
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;    
 }
 
+.final-text-elements {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin: 7vh;
+    height: 50vh;
+    // border: 1px solid pink;
+    z-index: 3;
+}
+
+.final-title {
+    width: 50%;
+}
+.final-score,
+.final-text {
+    text-align: center;
+    width: 90%;
+}
+
+.final-btn {
+    @include basic-btn;
+    background-color: $green;
+    letter-spacing: 1px;
+}
 .bottom-pic {
     position: absolute;
     bottom: 0;
     background-size: cover;
 }
-.pic-win {
+.pic-loose {
     background-image: url(../img/ftl_pic_s.png);
     width: 270px;
     height: 215px;
 }
-.pic-loose {
+.pic-win {
     background-image: url(../img/ftw_pic_s.png);
     width: 100%;
-    height: 250px;
+    min-height: 210px;
     background-size: cover;
     align-self: center;
 }
