--- a/src/scss/final/content_final.scss
+++ b/src/scss/final/content_final.scss
@@ -18,7 +18,6 @@
     justify-content: space-around;
     margin: 7vh;
     height: 50vh;
-    // border: 1px solid pink;
     z-index: 3;
 }
 
@@ -29,11 +28,13 @@
 .final-text {
     text-align: center;
     width: 90%;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 .final-btn {
     @include basic-btn;
-    background-color: $green;
+    background-color: $lila;
     letter-spacing: 1px;
 }
 .bottom-pic {
