--- a/src/scss/final/main_final.scss
+++ b/src/scss/final/main_final.scss
@@ -4,3 +4,4 @@
 @import './content_final.scss';
 @import './chapter_final.scss';
 @import './media_final.scss';
+@import './media_chapter_final.scss'
