--- a/src/scss/final/media_final.scss
+++ b/src/scss/final/media_final.scss
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 750px ) {
     .final-text-elements {
-        border: 2px dotted maroon;
+        // border: 2px dotted maroon;
         // width: 60vw;
     }
     .final-title {
