--- a/src/scss/final/chapter_final.scss
+++ b/src/scss/final/chapter_final.scss
@@ -37,6 +37,9 @@
 .par2 {
     // font-style: italic;
     font-size: 16px;
+    font-weight: 300;
+    font-style: italic;
+    padding: 2vh 0;
 }
 
 @keyframes chapta {
