--- a/src/scss/home/_content_home.scss
+++ b/src/scss/home/_content_home.scss
@@ -22,13 +22,14 @@
 }
 
 .start-premiere {
-    font-weight: bold;
+    font-weight: 500;
     color: $lila;
+    width: 65vw;
 }
 
 .text {
     font-size: 13px;
-    line-height: 20px;
+    line-height: 16px;
     width: 50vw;
     text-align: center;
 }
