--- a/src/scss/final/media_chapter_final.scss
+++ b/src/scss/final/media_chapter_final.scss
@@ -3,6 +3,13 @@
         top: 4vh;
         left: 5vw;
     }
+
+    .buy-btn {
+        top: 4vh;
+        right: 5vw;
+        width: 60px;
+        height: 60px;
+    }
 }
 
 
@@ -14,6 +21,14 @@
     .back-btn {
         font-size: 17px;
         line-height: 22px;
+    }
+    .buy-btn {
+        font-size: 17px;
+        width: 70px;
+        height: 70px;
+    }
+    .buy-btn span {
+        font-size: 28px;
     }
     .par1,
     .par2 {
