readme edited, notfound style added, hover removed from mobiles

--- a/src/scss/question/_media_question.scss
+++ b/src/scss/question/_media_question.scss
@@ -33,6 +33,9 @@
     .quiz-btn {
         margin-left: 8vw;
         font-size: 17px;
+        &:hover {
+            background-color: #49155C;
+        }
     }
     .quiz-buttons {
         height: 35vh;
